--- a/PaginaWeb/css/estilos.css
+++ b/PaginaWeb/css/estilos.css
@@ -1,17 +1,21 @@
 body{
     background-image: url(../img/fondo.jpg);
-    background-size: contain;
+    background-size: cover;
     background-attachment: fixed;
+    background-position: center;
     background-repeat: no-repeat;
     width: 100%;
     height: 300px;
     margin: 0;
+    max-height: 300px;
 }
 
 header{
     position: relative;
     width: 100%;
     height: 600px;
+    background: hsla(243, 100%, 7%, 0.151);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0.5) 0%, rgba(9,9,121,0.5) 35%, rgba(0,212,255,0.5) 100%);
 }
 #logo{
     position: absolute;
@@ -28,13 +32,15 @@ header{
 }
 .introduccion{
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: white;
+    text-align: center;
 }
 .sobre_nosotros{
     width: 100%;
     height: 900px;
     background-color: whitesmoke;
+    margin: 0;
 }
 .textoheader{
     color: white;
@@ -51,5 +57,21 @@ header{
     bottom: 0;
     width: 100%;
     
+}
+
+section h2{
+    color: #090979;
+    margin: 0;
+}
+footer{
+    position: relative;
+    background-color: black;
+    width: 100%;
+    height: 100px;
+    margin: 0;
+}
+#texto_footer{
+    color: white;
+    margin: 0;
 }
 
