--- a/PaginaWeb/css/estilos.css
+++ b/PaginaWeb/css/estilos.css
@@ -17,12 +17,90 @@ header{
     background: hsla(243, 100%, 7%, 0.151);
     background: linear-gradient(90deg, rgba(2, 0, 36, 0.5) 0%, rgba(9,9,121,0.5) 35%, rgba(0,212,255,0.5) 100%);
 }
+
+.menu-toogle{
+    display: none;
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    font-size: 30px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+
+}
+.barra_de_navegacion li{
+    position: relative;
+}
+.barra_de_navegacion ul li {
+    display: inline-block;
+    text-align: center;
+}
+
+.barra_de_navegacion ul li a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 0 10px;
+    color: white;
+    text-transform: uppercase;
+    transition: .2s;
+    width: 150px;
+    height: 100px;
+}
+
+.barra_de_navegacion ul li a:hover {
+    font-size: 30px;
+}
+
+.show{
+    height: 125px !important;
+}
+
+@media  screen and (max-width:800px) {
+    .menu-toogle{
+        display: block;
+    }
+
+    .barra_de_navegacion{
+        position:relative;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        transition: .3s ease-out;
+    }
+
+    .barra_de_navegacion ul li{
+        display: block;
+        text-align: center;
+        height: 30px;
+    }
+
+    .barra_de_navegacion ul li a{
+        color: white;
+        font-size: 20px;
+        width: 100%;
+        height: 30px;
+    }
+
+    .barra_de_navegacion ul li a:hover{
+        background-color: #090979;
+        width: 200px;
+    }
+}
+
 #logo{
     position: absolute;
     color: white;
     top: 10%;
     left: 5%;
     margin: 0;
+    border-radius: 5%;
 }
 .barra_de_navegacion{
     position:absolute;
@@ -39,7 +117,7 @@ header{
 .sobre_nosotros{
     width: 100%;
     height: 900px;
-    background-color: whitesmoke;
+    background-color: rgb(224, 224, 224);
     margin: 0;
 }
 .textoheader{
