Modificación en el menu

--- a/PaginaWeb/css/estilos.css
+++ b/PaginaWeb/css/estilos.css
@@ -84,7 +84,7 @@ header{
     .barra_de_navegacion ul li a{
         color: white;
         font-size: 20px;
-        width: 100%;
+        width: 100px;
         height: 30px;
     }
 
