--- a/PaginaWeb/css/estilos.css
+++ b/PaginaWeb/css/estilos.css
@@ -114,7 +114,7 @@ header{
     background-color: white;
     text-align: center;
 }
-.sobre_nosotros{
+.productos{
     width: 100%;
     height: 900px;
     background-color: rgb(224, 224, 224);
