--- a/Tema 1/PaginaWeb/PaginaBootstrap/css/estilos.css
+++ b/Tema 1/PaginaWeb/PaginaBootstrap/css/estilos.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+
 body{
     background-image: url(../img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+#ventana{
     width: 100%;
-    height: 300px;
-    margin: 0;
-    max-height: 300px;
-    font-family: 'Roboto', sans-serif;
+    height: 600px;
+    background: hsla(243, 100%, 7%, 0.151);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 0.5) 0%, rgba(9,9,121,0.5) 35%, rgba(0,212,255,0.5) 100%);
 }
