--- a/Tema 1/PaginaWeb/PaginaBootstrap/css/estilos.css
+++ b/Tema 1/PaginaWeb/PaginaBootstrap/css/estilos.css
@@ -1,15 +1,48 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 body{
     background-image: url(../img/fondo.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: 'Open Sans', sans-serif;
 }
 
+/* header */
+#img{
+    margin: 10px;
+    border-radius: 20px;
+}
+/* Fin header */
+
+/* navegacion */
+.navbar-nav li a{
+    margin: 0px 20px 0px 20px;
+}
+.navbar-nav li a:hover{
+    transform: scale(1.5);
+    
+}
+/* Fin navegacion */
+
+/* Ventana */
 #ventana{
-    width: 100%;
-    height: 600px;
+    height: 300px;
     background: hsla(243, 100%, 7%, 0.151);
     background: linear-gradient(90deg, rgba(2, 0, 36, 0.5) 0%, rgba(9,9,121,0.5) 35%, rgba(0,212,255,0.5) 100%);
 }
+#textoVentana{
+    color: white;
+    text-align: center;
+}
+#textoVentana h1{
+   margin: 200px 0px 30px;
+}
+/* Fin ventana */
+
+/* Busqueda */
+.busqueda{
+    background-color: whitesmoke;
+    height: 1000px;
+}
+/* Fin busqueda */
